--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
